# telegram-bot-rest

./: .gitignore  Cargo.toml  README.md  telegram-bot.conf-dist
src/: config.rs  config_tests.rs  filters.rs  handlers.rs  logging.rs  main.rs
tests/: telegram-bot-empty-chat-ids.conf  telegram-bot-invalid-port.conf  telegram-bot-missing-chat-ids.conf  telegram-bot-missing-property1.conf  telegram-bot-missing-property2.conf  telegram-bot-undefined-port.conf  telegram-bot.conf
