[package]
name = "telegram-bot-rs"
version = "0.1.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
reqwest = { version = "0.10", features = ["json"] }
base64 = "0.12"
percent-encoding = "2.1.0"

regex = "1"

log = "0.4.8"
log4rs = "0.10.0"
